[package]
name = "headful"
version = "0.1.0"
edition = "2024"

[features]
default = []
llm = ["dep:reqwest", "dep:serde", "dep:serde_json"]

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
chromiumoxide = "0.8"
futures-util = "0.3"
htmd = "0.5"
clap = { version = "4.5", features = ["derive"] }

# Optional dependencies for LLM cleanup feature
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }